UI: Dropdown layoutshift and checkbox focus size fix
* fixed when dropdown caused a layout shift when getting active state
* fixed checkbox active state border being 1px too wide and high

--- a/packages/klevu-ui/src/components/klevu-checkbox/klevu-checkbox.css
+++ b/packages/klevu-ui/src/components/klevu-checkbox/klevu-checkbox.css
@@ -48,8 +48,8 @@ input[type="checkbox"]:focus::after {
   position: absolute;
   top: -3px;
   left: -3px;
-  width: calc(100% + 3px);
-  height: calc(100% + 3px);
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
   border: 2px solid var(--color);
   border-radius: calc(var(--klevu-border-radius-s) + 2px);
 }
